# retro-spreadsheet

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.agents/skills/appkit-spreadsheet-ui/: SKILL.md
.agents/skills/formula-engine/: SKILL.md
.agents/skills/spreadsheet-core/: SKILL.md
.agents/skills/spreadsheet-testing/: SKILL.md
.circleci/: config.yml
cmake/: RunUiSmoke.cmake
docs/: project-structure.md
include/RetroSpreadsheet/: FormulaEditingSession.h  FormulaEvaluator.h  MainWindow.h  SelectionModel.h  SpreadsheetController.h  Workbook.h
resources/: Info.plist
skills/retro-spreadsheet/: SKILLS.md
src/: AppKitTheme.h  AppKitTheme.mm  FormulaEditingSession.cpp  FormulaEvaluator.cpp  MainWindow.cpp  MainWindow.mm  SelectionModel.cpp  SpreadsheetController.cpp  Workbook.cpp  main.cpp
tests/: FormulaEditingSessionTests.cpp  FormulaEvaluatorTests.cpp  SpreadsheetControllerTests.cpp  TestHarness.h  WorkbookTests.cpp
